Key generation (not good not terrible)
